[package]
name = "orx-concurrent-vec"
version = "3.6.0"
edition = "2024"
authors = ["orxfun <orx.ugur.arikan@gmail.com>"]
description = "A thread-safe, efficient and lock-free vector allowing concurrent grow, read and update operations."
license = "MIT OR Apache-2.0"
repository = "https://github.com/orxfun/orx-concurrent-vec/"
keywords = ["concurrency", "vec", "data-structures", "atomic", "lock-free"]
categories = ["data-structures", "concurrency", "rust-patterns", "no-std"]

[dependencies]
orx-pseudo-default = { version = "2.1.0", default-features = false }
orx-pinned-vec = "3.16.0"
orx-fixed-vec = "3.16.0"
orx-split-vec = "3.16.0"
orx-pinned-concurrent-col = "2.13.0"
orx-concurrent-option = "1.5.0"
serde = { version = "1.0.219", optional = true, default-features = false }

[dev-dependencies]
append-only-vec = "0.1.7"
boxcar = "0.2.11"
clap = { version = "4.5.35", features = ["derive"] }
criterion = "0.5.1"
orx-iterable = { version = "1.3.0", default-features = false }
rand = "0.9.0"
rand_chacha = "0.9.0"
rayon = "1.10.0"
serde_json = { version = "1.0.140", default-features = false, features = [
    "std",
] }
test-case = "3.3.1"

[[bench]]
name = "collect_with_extend"
harness = false

[features]
default = []
serde = ["dep:serde"]
